# hcd2lime.py

./: .gitignore  ReadMe.md  pyproject.toml  setup.cfg
hcd2lime/: __init__.py  __main__.py
hcd2lime/kaitai/: __init__.py
test/: tests.py
