[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile.setuptools[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "hcd2lime/kaitai"

[tool.kaitai.formats.cpython_frozen_table]
path = "hardware/bluetooth/bluetooth_hcd.ksy"

[tool.kaitai.repo]
git = "https://github.com/KOLANICH/kaitai_struct_formats.git"
refspec = "broadcom_patchram"
update = true
localPath = "kaitai_struct_formats"
