[metadata]
name = hcd2lime
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/hcd2lime.py
description = Converts an *.hcd file for Cypress chips into LiME memory dump representing the writes found in the dump
long_description = file: ReadMe.md
keywords = LiME, Cypress, Broadcom, patchram, internalblue, bluetooth, hci, hcd
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = hcd2lime, hcd2lime.kaitai
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime
	lime @ git+https://github.com/KOLANICH-libs/lime.py.git

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
